--- a/about.html
+++ b/about.html
@@ -2,13 +2,13 @@
       <html>
            <head>
               <title> ABOUT </title>
-              <link rel="stylesheet" type="text/css" href="scss.css" >
+              <link rel="stylesheet" type="text/css" href="css/scss.css" >
           </head>
         <body>
             <div calss="container">
                 <header>
                  <div class="logo">
-                   <img src="logo2.jpg" alt="logoo of website"> 
+                   <img src="pic/logo2.jpg" alt="logoo of website"> 
                   </div> 
                  <nav>
                      <ul>
