--- a/home .html
+++ b/home .html
@@ -6,13 +6,13 @@
       <html>
            <head>
               <title> HOME </title>
-              <link rel="stylesheet" type="text/css" href="scss.css" >
+              <link rel="stylesheet" type="text/css" href="css/scss.css" >
           </head>
         <body>
           <div calss="container">
              <header>
               <div class="logo">
-                <img src="logo2.jpg" alt="logoo of website"> 
+                <img src="pic/logo2.jpg" alt="logoo of website"> 
                </div> 
               <nav>
                   <ul>
